[BUGFIX] EM: avoid cropping action columns
In some browsers the action icons of the new EM disappear, to be
replaced by an ellipsis (...). This is due to ExtJS using
"text-overflow: ellipsis" and some browsers miscalculating the
width of the column. This text-overflow directive is not necessary
as the icons fit nicely anyway.

Fixes: #30900
Releases: 6.0, 4.7, 4.6, 4.5
Reviewed-on: http://review.typo3.org/10879
Tested-by: Jigal van Hemert

--- a/typo3/sysext/em/res/css/t3_em.css
+++ b/typo3/sysext/em/res/css/t3_em.css
@@ -177,6 +177,9 @@ img.installExtension, img.removeExtension {
 	background-color: #abd99a;
 }
 
+#em-local-extensions .x-action-col-cell .x-grid3-cell-inner {
+    text-overflow: clip;
+}
 
 .em-extlist-extinfo label,
 .em-info label {
